<resources>
    <string name="app_name">Running-Leaderboard</string>

    <string name="menu_leader_board">Rangliste</string>
    <string name="menu_pump_it">Fitness Apps Statistiken</string>
    <string name="menu_friends">Freunde</string>
    <string name="menu_sessions">Live</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_runtastic">Runtastic</string>
    <string name="menu_runtastic_apps">Runtastic Apps</string>
    <string name="menu_runtastic_url">runtastic.com</string>

    <string name="default_login">Gast</string>
    <string name="default_login_mail"> </string>
    
    <string name="button_text_login">Einloggen</string>
    
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">Passwort</string>
    
    <string name="login_error_email">Bitte gib deine E-Mail Adresse ein</string>
    <string name="login_error_password">Bitte gib dein Passwort ein</string>
    <string name="login_success">Du bist jetzt eingeloggt</string>
    
    <string name="leader_board_this_week">Diese Woche</string>
    <string name="leader_board_last_week">Letzte Woche</string>
    <string name="leader_board_this_month">Dieser Monat</string>
    <string name="leader_board_last_month">Letzter Monat</string>
    <string name="leader_board_no_activities_title">Keine Laufaktivitäten verfügbar</string>
    <string name="leader_board_no_activities">Zeichne ein Lauftraining auf und schon bist du diese Woche auf der Rangliste dabei!</string>
    
    <string name="live_sessions_friends">Freunde</string>
    <string name="live_sessions_world">Welt</string>
    <string name="live_sessions_no_session_title">Keine Aktivitäten verfügbar</string>
    <string name="live_sessions_no_session">Starte eine Aktivität mit LIVE Tracking und lasse dich von deinen Freunden anfeuern</string>
    
    <string name="friends_not_found_title">Du hast keine Freunde auf deiner Liste</string>
    <string name="friends_not_found">Lade deine Freunde in Runtastic ein</string>
    
    <string name="pump_it__not_load">Die Fitness Apps Statistiken konnten nicht geladen werden</string>
    
    <string name="navigation_drawer_open">Navigation öffnen</string>
    <string name="navigation_drawer_close">Navigation schließen</string>
</resources>
